Avoid word break in header

--- a/web/themes/custom/cfia/css/style.css
+++ b/web/themes/custom/cfia/css/style.css
@@ -107,7 +107,7 @@ a:hover, .link:hover {
   padding-bottom: 30px;
 }
 
-.page-banner h1 {
+.page-banner .heading h1 {
   text-align: center;
   word-break: normal;
 }
@@ -249,6 +249,17 @@ a:hover, .link:hover {
   transform: rotate(180deg);
 }
 
+/* Blockquotes */
+.content-descriptions blockquote {
+  margin: 20px 0;
+  padding: 20px 20px 20px 15px;
+  border-left: 5px solid var(--cfia-primary-color);
+}
+
+.content-descriptions blockquote p {
+  margin-bottom: 0;
+  font-size: large;
+}
 
 /* Hide/remove unwanted elements*/
 .case-items .read,
